[gd_scene load_steps=2 format=3 uid="uid://di76lyecqgo53"]

[ext_resource type="Script" path="res://Scripts/Interactive/interactive_area.gd" id="1_ngsw7"]

[node name="InteractiveArea" type="Area2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_ngsw7")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
